InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/vlocity_ins__ConsumerDrug__c.object-meta.xml
<CustomObject>
    <description>Represents a health plan member&apos;s prescription medications and the instructions for administration of the medicine such as drug name, rx number, dosage or last fill date.</description>
    <label>Medication</label>
    <nameField>
        <label>Prescription Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>