InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__AdministrationTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AdministrationTime__c</fullName>
    <label>Administration Time</label>
    <type>DateTime</type>
</CustomField>