InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__CompositeKey__c</fullName>
    <description>This is a unique identifier for the record, formed from the ID values of the corresponding Drug and Account records. This is to uniquely identify those combinations. This is not intended for users to set.</description>
    <label>Medication Record Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>