InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact record that represents the member.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>ConsumerDrugs</relationshipName>
    <type>Lookup</type>
</CustomField>