InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__Dosage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Dosage__c</fullName>
    <description>The dose is the amount of drug taken at any one time.</description>
    <label>Dosage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>