InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__DrugId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DrugId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drug</label>
    <referenceTo>vlocity_ins__Drug__c</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>ConsumerDrugs</relationshipName>
    <type>Lookup</type>
</CustomField>