InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__DrugName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DrugName__c</fullName>
    <formula>IF(vlocity_ins__DrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__DrugId__r.vlocity_ins__TradeName__c, vlocity_ins__DrugId__r.vlocity_ins__GenericName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug Name</label>
    <type>Text</type>
</CustomField>