InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__DrugPricePaid__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DrugPricePaid__c</fullName>
    <label>Drug Price Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>