InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__FrequencyOther__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__FrequencyOther__c</fullName>
    <description>When the Frequency field is set to &apos;other&apos;, this field will contain the corresponding frequency value.</description>
    <label>Frequency (Other)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>