InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__IsGenericOk__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsGenericOk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Ok</label>
    <type>Checkbox</type>
</CustomField>