InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__MedicationEndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MedicationEndDate__c</fullName>
    <description>The date the Member stopped taking the Medication.</description>
    <label>Medication End Date</label>
    <type>Date</type>
</CustomField>