InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__NumberOfRefill__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__NumberOfRefill__c</fullName>
    <label>Number Of Refill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>