InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__PrescriptionFillDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PrescriptionFillDate__c</fullName>
    <label>Prescription Fill Date</label>
    <type>Date</type>
</CustomField>