InsuranceOrg/force-app/main/default/objects/vlocity_ins__ConsumerDrug__c/fields/vlocity_ins__UnitOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__UnitOfMeasurement__c</fullName>
    <label>Unit Of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>Amb</fullName>
            </value>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>CELLS/ML</fullName>
            </value>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>MCI/ML</fullName>
            </value>
            <value>
                <fullName>MEQ</fullName>
            </value>
            <value>
                <fullName>MEQ/MG</fullName>
            </value>
            <value>
                <fullName>MEQ/ML</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MG/ACTUAT</fullName>
            </value>
            <value>
                <fullName>MG/HR</fullName>
            </value>
            <value>
                <fullName>MG/MG</fullName>
            </value>
            <value>
                <fullName>MG/ML</fullName>
            </value>
            <value>
                <fullName>MG/SQCM</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
            <value>
                <fullName>ML/ML</fullName>
            </value>
            <value>
                <fullName>UNT</fullName>
            </value>
            <value>
                <fullName>UNT/MG</fullName>
            </value>
            <value>
                <fullName>UNT/ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>